feat: added bootstrap script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,13 @@ services:
   arch:
     image: "archlinux:latest"
     container_name: "arch"
+    networks:
+      - arch-net
     privileged: true
     tty: true
     volumes:
       - .:/arch
+
+networks:
+  arch-net:
+    driver: bridge
