--- a/pacman.conf
+++ b/pacman.conf
@@ -97,6 +97,6 @@ Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
-#[custom]
-#SigLevel = Optional TrustAll
-#Server = file:///home/custompkgs
+[space]
+SigLevel = Optional TrustedOnly
+Server = https://unave.github.io/$repo/$arch
