chore: define custom colors for ly

--- a/airootfs/etc/systemd/system/display-manager.service
+++ b/airootfs/etc/systemd/system/display-manager.service
@@ -1,1 +1,16 @@
-/usr/lib/systemd/system/ly.service
+[Unit]
+Description=TUI display manager
+After=systemd-user-sessions.service plymouth-quit-wait.service
+After=getty@tty2.service
+
+[Service]
+Type=idle
+ExecStartPre=/usr/bin/printf '%%b' '\e]P00d1117\e]P723d18c\ec'
+ExecStart=/usr/bin/ly
+StandardInput=tty
+TTYPath=/dev/tty2
+TTYReset=yes
+TTYVHangup=yes
+
+[Install]
+Alias=display-manager.service
