feat(airootfs): added custom sway config

--- a/airootfs/etc/systemd/system/display-manager.service
+++ b/airootfs/etc/systemd/system/display-manager.service
@@ -5,7 +5,7 @@ After=getty@tty2.service
 
 [Service]
 Type=idle
-ExecStartPre=/usr/bin/printf '%%b' '\e]P00d1117\e]P723d18c\ec'
+ExecStartPre=/usr/bin/printf '%%b' '\e]P00d1117\e]P7ffffff\ec'
 ExecStart=/usr/bin/ly
 StandardInput=tty
 TTYPath=/dev/tty2
