chore: change project identity

--- a/pacman.conf
+++ b/pacman.conf
@@ -97,4 +97,4 @@ Include = /etc/pacman.d/mirrorlist
 
 [space]
 SigLevel = Optional TrustedOnly
-Server = https://unaveos.github.io/$repo/$arch
+Server = https://flateos.github.io/$repo/$arch
