chore: change signature level for space mirror

--- a/pacman.conf
+++ b/pacman.conf
@@ -96,5 +96,5 @@ Include = /etc/pacman.d/mirrorlist
 #Include = /etc/pacman.d/mirrorlist
 
 [space]
-SigLevel = Optional TrustedOnly
+SigLevel = Required DatabaseOptional
 Server = https://flateos.github.io/$repo/$arch
